<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/frameLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

     <include layout="@layout/item_list" />
</FrameLayout>
