<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="205dp"
    card_view:cardCornerRadius="4dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    card_view:cardBackgroundColor="@color/recipe_card">
        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="Brownies"
            android:textColor="@color/recipe_card_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"/>

</android.support.v7.widget.CardView>

