<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_media_frame"
        >

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/audio_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/iv_step_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:padding="10dp"
            android:src="@drawable/icon_cupcake"/>


    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_no_view_error"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/video_not_available"
        android:paddingLeft="10dp"
        android:visibility="gone"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"/>

</RelativeLayout>

